[fix] in memory DOM implementation getAttribute nonnull
fixes #5672

Previously ElementImpl.getAttribute and ElementImpl.getAttributeNodeNS of in memory nodes violated
the API contract of org.w3c.dom.element. It was returning null if an attribute was not set instead
of an empty String.

Fixing this lead to a host of changes throughout the project.
The if-conditions are simplified and even flipped in a few locations were this greatly improved
readability of thd code.
The import of StringUtils was dropped were possible.